Added index file code

--- a/index.html
+++ b/index.html
@@ -18,14 +18,29 @@
 
 <body>
   <header class="container=fluid">
-    <div class="navbar navbar-expand-md fixed-top nav_container">
-      <img src="" alt="">
-      <nav class="nav1">
+    <nav class="navbar nav1 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end pb-1 pt-0" role="navigation">
+      <ul class="">
+        <li><a href="#" class="nav-link1"><img src="assets/images/104498_facebook_icon.svg" alt="facebook icon" class="nav-icons"></a></li>
+        <li><a href="#" class="nav-link1"><img src="assets/images/104501_twitter_icon.svg" alt="twitter icon" class="nav-icons"></a></li>
+        <li><a href="#" class="nav-link1">English</a></li>
+        <li><a href="#" class="nav-link1">My Page</a></li>
+        <li><a href="#" class="nav-link1">Logouts</a></li>
+      </ul>
+<button class="menu justify-content-start"><img src="assets/images/menu_button.svg" alt="menu button"></button>
 
-  
-    </nav>
-  </div>
+  </nav>
 
+  <nav class="navbar nav2 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end" role="navigation">
+    <ul class="">
+      <li><a href="#" class="nav-link2"><img src="assets/images/104498_facebook_icon.svg" alt="facebook icon" class="nav-icons"></a></li>
+      <li><a href="#" class="nav-link2"><img src="assets/images/104501_twitter_icon.svg" alt="twitter icon" class="nav-icons"></a></li>
+      <li><a href="#" class="nav-link2">English</a></li>
+      <li><a href="#" class="nav-link2">My Page</a></li>
+      <li><a href="#" class="nav-link2">Logout</a></li>
+    </ul>
+<!-- <button class="menu justify-content-start"><img src="assets/images/menu_button.svg" alt="menu button"></button> -->
+
+</nav>
   </header>
 
 
