--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
   <nav class="navbar nav2 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end" role="navigation">
     <ul class="">
-      <li><a href="#" class="nav-link2"><img src="assets/images/104498_facebook_icon.svg" alt="facebook icon" class="nav-icons"></a></li>
-      <li><a href="#" class="nav-link2"><img src="assets/images/104501_twitter_icon.svg" alt="twitter icon" class="nav-icons"></a></li>
-      <li><a href="#" class="nav-link2">English</a></li>
-      <li><a href="#" class="nav-link2">My Page</a></li>
-      <li><a href="#" class="nav-link2">Logout</a></li>
+      <li><a href="#" class="nav-link2">About</a></li>
+      <li><a href="#" class="nav-link2">Program</a></li>
+      <li><a href="#" class="nav-link2">Join</a></li>
+      <li><a href="#" class="nav-link2">Sponsors</a></li>
+      <li><a href="#" class="nav-link2 logo">BTR Concert</a></li>
     </ul>
 <!-- <button class="menu justify-content-start"><img src="assets/images/menu_button.svg" alt="menu button"></button> -->
 
