added back ground images

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 
 </nav>
   </header>
+  <section class="home ">
+<div class="my-home-top">
+  <h3>"Do you want to connect with your roots?"</h3>
+  <h1>BACK TO ROOTS GLOBAL CONCERT 2012</h1>
+</div>
+  </section>
 
 
   <script src="main.js"></script>
