Added glow in the text

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   </header>
   <section class="home ">
 <div class="my-home-top">
-  <h3>"Do you want to connect with your roots?"</h3>
-  <h1>BACK TO ROOTS GLOBAL CONCERT 2012</h1>
+  <div class="overlay"><div class="home-text"><h3>"Do you want to connect with your roots?"</h3><br />
+    <h1>BACK TO ROOTS<br /> GLOBAL CONCERT <br /> 2012</h1></div></div>
 </div>
   </section>
 
