--- a/index.html
+++ b/index.html
@@ -18,37 +18,49 @@
 
 <body>
   <header class="container=fluid">
-    <nav class="navbar nav1 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end pb-1 pt-0" role="navigation">
+    <nav class="navbar nav1 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end pb-1 pt-0"
+      role="navigation">
       <ul class="">
-        <li><a href="#" class="nav-link1"><img src="assets/images/104498_facebook_icon.svg" alt="facebook icon" class="nav-icons"></a></li>
-        <li><a href="#" class="nav-link1"><img src="assets/images/104501_twitter_icon.svg" alt="twitter icon" class="nav-icons"></a></li>
+        <li><a href="#" class="nav-link1"><img src="assets/images/104498_facebook_icon.svg" alt="facebook icon"
+              class="nav-icons"></a></li>
+        <li><a href="#" class="nav-link1"><img src="assets/images/104501_twitter_icon.svg" alt="twitter icon"
+              class="nav-icons"></a></li>
         <li><a href="#" class="nav-link1">English</a></li>
         <li><a href="#" class="nav-link1">My Page</a></li>
         <li><a href="#" class="nav-link1">Logouts</a></li>
       </ul>
-<button class="menu justify-content-start"><img src="assets/images/menu_button.svg" alt="menu button"></button>
+      <button class="menu justify-content-start"><img src="assets/images/menu_button.svg" alt="menu button"></button>
 
-  </nav>
+    </nav>
 
-  <nav class="navbar nav2 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end" role="navigation">
-    <ul class="">
-      <li><a href="#" class="nav-link2">About</a></li>
-      <li><a href="#" class="nav-link2">Program</a></li>
-      <li><a href="#" class="nav-link2">Join</a></li>
-      <li><a href="#" class="nav-link2">Sponsors</a></li>
-      <li><a href="#" class="nav-link2 logo">BTR Concert</a></li>
-    </ul>
-<!-- <button class="menu justify-content-start"><img src="assets/images/menu_button.svg" alt="menu button"></button> -->
+    <nav class="navbar nav2 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end"
+      role="navigation">
+      <ul class="">
+        <li><a href="#" class="nav-link2">About</a></li>
+        <li><a href="#" class="nav-link2">Program</a></li>
+        <li><a href="#" class="nav-link2">Join</a></li>
+        <li><a href="#" class="nav-link2">Sponsors</a></li>
+        <li><a href="#" class="nav-link2 logo">BTR Concert</a></li>
+      </ul>
+      <!-- <button class="menu justify-content-start"><img src="assets/images/menu_button.svg" alt="menu button"></button> -->
 
-</nav>
+    </nav>
   </header>
-  <section class="home ">
-<div class="my-home-top">
-  <div class="overlay"><div class="home-text"><h3>"Do you want to connect with your roots?"</h3><br />
-    <h1>BACK TO ROOTS<br /> GLOBAL CONCERT <br /> 2012</h1></div></div>
-</div>
-  </section>
 
+  <section>
+    <div class="home-top">
+      <div class="overlay">
+        <div class="home-text">
+          <h3>"Do you want to connect with your roots?"</h3><br />
+          <h1>BACK TO ROOTS<br /> GLOBAL CONCERT <br /> 2012</h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="home2">
+
+    </div>
+  </section>
 
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
