--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     </div>
 
     <div class="home2">
-
+<p>Main Program <img class="line" src="assets/images/line_icon.svg" alt="line" > </p>
+ 
     </div>
   </section>
 
