--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="home2">
-<p>Main Program <img class="line" src="assets/images/line_icon.svg" alt="line" > </p>
+<p>Main Program <img class="line" src="assets/images/line_icon5.png" alt="line" > </p>
  
     </div>
   </section>
