added infomation about main program

--- a/index.html
+++ b/index.html
@@ -58,8 +58,53 @@
     </div>
 
     <div class="home2">
-<p>Main Program <img class="line" src="assets/images/line_icon5.png" alt="line" > </p>
- 
+      <p>Main Program <img class="line" src="assets/images/line_icon5.png" alt="line"> </p>
+      <div class="card-box">
+        <div class="box box1">
+          <div class="icon icon1">
+            <img src="assets/images/music2_icon.svg" alt="microphone">
+          </div>
+          <div>
+            <h6>Music</h6>
+          </div>
+          <div class="box-p">
+            <p>Listen to prominent musicians from various countries sharing the message of love through their music.</p>
+          </div>
+        </div>
+        <div class="box box2">
+          <div class="icon icon2">
+            <img src="assets/images/exhibition_icon.svg" alt="exhibition icon">
+          </div>
+          <div>
+            <h6>Exhibition</h6>
+          </div>
+          <div class="box-p">
+            <p>There will be a lot of items on exhibition ranging from fashoin to art and promotions.</p>
+          </div>
+        </div>
+        <div class="box box3">
+          <div class="icon icon3">
+            <img src="assets/images/music_icon.svg" alt="music box icon">
+          </div>
+          <div>
+            <h6>Entertainment</h6>
+          </div>
+          <div class="box-p">
+            <p>Entertainment is core factor of the Back To Roots Global Concert, and be ready to be blown away.</p>
+
+          </div>
+        </div>
+        <div class="box box4">
+          <div class="icon icon4"><img src="assets/images/donation_icon.svg" alt="dollar coin icon"></div>
+          <div>
+            <h6>Pledges <br /> & <br /> Donations</h6>
+          </div>
+          <div class="box-p">
+            <p>Most important part of the Back To Roots Global Concert is donations that will help eliminate some of global challenges through charities.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
