--- a/index.html
+++ b/index.html
@@ -100,11 +100,13 @@
             <h6>Pledges <br /> & <br /> Donations</h6>
           </div>
           <div class="box-p">
-            <p>Most important part of the Back To Roots Global Concert is donations that will help eliminate some of global challenges through charities.</p>
+            <p>Most important part of the Back To Roots Global Concert is donations that will help eliminate some of
+              global challenges through charities.</p>
           </div>
         </div>
       </div>
-
+      <p class="no-display">SEE THE WHOLE PROGRAM</p>
+      <input type="button" value="Join BTR Global Concert 2012" class="join-btn">
     </div>
   </section>
 
