added last button

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
       </div>
       <p class="no-display">SEE THE WHOLE PROGRAM</p>
-      <input type="button" value="Join BTR Global Concert 2012" class="join-btn">
+      <div class="btn-div card-box"><input type="button" value="Join BTR Global Concert 2012" class="join-btn"> </div>
     </div>
   </section>
 
