--- a/index.html
+++ b/index.html
@@ -51,42 +51,46 @@
     <div class="home-top">
       <div class="overlay">
         <div class="home-text">
-          <h3>"Do you want to connect with your roots?"</h3><br />
+          <h3>"It's about time to connect with your roots?"</h3><br />
           <h1>BACK TO ROOTS<br /> GLOBAL CONCERT <br /> 2012</h1>
+        </div>
+        <div class="home-p">
+          <p>A joyful celebration believing in the value of connecting with one's roots through musical entertainment.
+            Become the part of this year's concert by buying your ticket online.</p>
         </div>
       </div>
     </div>
 
-    <div class="home2">
+    <div class="home2 container-fluid">
       <p>Main Program <img class="line" src="assets/images/line_icon5.png" alt="line"> </p>
-      <div class="card-box">
-        <div class="box box1">
+      <div class="card-box container-fluid">
+        <div class="box box1 container-fluid">
           <div class="icon icon1">
             <img src="assets/images/music2_icon.svg" alt="microphone">
           </div>
-          <div>
+          <div class="head6">
             <h6>Music</h6>
           </div>
           <div class="box-p">
             <p>Listen to prominent musicians from various countries sharing the message of love through their music.</p>
           </div>
         </div>
-        <div class="box box2">
+        <div class="box box2 container-fluid">
           <div class="icon icon2">
             <img src="assets/images/exhibition_icon.svg" alt="exhibition icon">
           </div>
-          <div>
+          <div class="head6">
             <h6>Exhibition</h6>
           </div>
           <div class="box-p">
             <p>There will be a lot of items on exhibition ranging from fashoin to art and promotions.</p>
           </div>
         </div>
-        <div class="box box3">
+        <div class="box box3 container-fluid">
           <div class="icon icon3">
             <img src="assets/images/music_icon.svg" alt="music box icon">
           </div>
-          <div>
+          <div class="head6">
             <h6>Entertainment</h6>
           </div>
           <div class="box-p">
@@ -94,9 +98,9 @@
 
           </div>
         </div>
-        <div class="box box4">
+        <div class="box box4 container-fluid">
           <div class="icon icon4"><img src="assets/images/donation_icon.svg" alt="dollar coin icon"></div>
-          <div>
+          <div class="head6">
             <h6>Pledges <br /> & <br /> Donations</h6>
           </div>
           <div class="box-p">
@@ -110,6 +114,18 @@
     </div>
   </section>
 
+  <section class="speakers"></section>
+
+  <section class="about">
+    <div class="page-about">
+      <div class="overlay">
+        <div class="home-text about-text">
+          <h3>"It's about time to connect with your roots."</h3><br />
+          <h1>BACK TO ROOTS<br /> GLOBAL CONCERT 2012</h1>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
