added sponsor images

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
           <p>A joyful celebration believing in the value of connecting with one's roots through musical entertainment.
             Become the part of this year's concert by buying your ticket online.</p>
         </div>
+        <div class="home-p2">
+          <span>2012.10.15(FRI) ~ 17(SUN)</span>
+          <p>@Madison Square Garden, New York City, USA</p>
+        </div>
       </div>
     </div>
 
@@ -123,9 +127,27 @@
           <h3>"It's about time to connect with your roots."</h3><br />
           <h1>BACK TO ROOTS<br /> GLOBAL CONCERT 2012</h1>
         </div>
+        <div class="home-p">
+          <p>A joyful celebration believing in the value of connecting with one's roots through musical entertainment.
+            Become the part of this year's concert by buying your ticket online.</p>
+        </div>
+        <div class="about-p2">
+          <p>Please contact us per Email for any further questions about the BTR Global Concert 2012!</p>
+          <p>info@brtgc.org</p>
+        </div>
       </div>
     </div>
   </section>
+
+  <footer class="foot">
+    <p class="foot-p">2012 Back To Roots. Some rights Reserved. </p>
+    <div class="sponsor">
+      <img id="sp1" src="assets/images/moster.png" alt="monster energy drink logo">
+      <img id="sp2" src="assets/images/ford-logo.png" alt="ford logo">
+      <img id="sp3" src="assets/images/coca.png" alt="coca-cola logo">
+      <img id="sp4" src="assets/images/yamaha.png" alt="yamaha logo">
+    </div>
+  </footer>
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
