added more styling code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header class="container=fluid">
-    <nav class="navbar nav1 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end pb-1 pt-0"
+    <nav class="navbar nav1 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end pb-0 pt-0"
       role="navigation">
       <ul class="">
         <li><a href="#" class="nav-link1"><img src="assets/images/104498_facebook_icon.svg" alt="facebook icon"
@@ -29,9 +29,8 @@
         <li><a href="#" class="nav-link1">My Page</a></li>
         <li><a href="#" class="nav-link1">Logouts</a></li>
       </ul>
-      <button class="menu justify-content-start"><img src="assets/images/menu_button.svg" alt="menu button"></button>
-
     </nav>
+    <a class="menu justify-content-start"><img src="assets/images/menu_button.svg" alt="menu button"></a>
 
     <nav class="navbar nav2 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end"
       role="navigation">
@@ -69,46 +68,49 @@
       <p>Main Program <img class="line" src="assets/images/line_icon5.png" alt="line"> </p>
       <div class="card-box container-fluid">
         <div class="box box1 container-fluid">
-          <div class="icon icon1">
-            <img src="assets/images/music2_icon.svg" alt="microphone">
+          <div class="icon icon1 no-hover">
+            <img class="no-hover" src="assets/images/music2_icon.svg" alt="microphone">
           </div>
-          <div class="head6">
-            <h6>Music</h6>
+          <div class="head6 no-hover">
+            <h6 class="no-hover">Music</h6>
           </div>
-          <div class="box-p">
-            <p>Listen to prominent musicians from various countries sharing the message of love through their music.</p>
+          <div class="box-p no-hover">
+            <p class="no-hover">Listen to prominent musicians from various countries sharing the message of love through
+              their music.</p>
           </div>
         </div>
         <div class="box box2 container-fluid">
-          <div class="icon icon2">
-            <img src="assets/images/exhibition_icon.svg" alt="exhibition icon">
+          <div class="icon icon2 no-hover">
+            <img class="no-hover" src="assets/images/exhibition_icon.svg" alt="exhibition icon">
           </div>
-          <div class="head6">
-            <h6>Exhibition</h6>
+          <div class="head6 no-hover">
+            <h6 class="no-hover">Exhibition</h6>
           </div>
-          <div class="box-p">
-            <p>There will be a lot of items on exhibition ranging from fashoin to art and promotions.</p>
+          <div class="box-p no-hover">
+            <p class="no-hover">There will be a lot of items on exhibition ranging from fashoin to art and promotions.
+            </p>
           </div>
         </div>
         <div class="box box3 container-fluid">
-          <div class="icon icon3">
-            <img src="assets/images/music_icon.svg" alt="music box icon">
+          <div class="icon icon3 no-hover">
+            <img class="no-hover" src="assets/images/music_icon.svg" alt="music box icon">
           </div>
-          <div class="head6">
-            <h6>Entertainment</h6>
+          <div class="head6 no-hover">
+            <h6 class="no-hover">Entertainment</h6>
           </div>
-          <div class="box-p">
-            <p>Entertainment is core factor of the Back To Roots Global Concert, and be ready to be blown away.</p>
+          <div class="box-p no-hover">
+            <p class="no-hover">Entertainment is core factor of the Back To Roots Global Concert, and be ready to be
+              blown away.</p>
 
           </div>
         </div>
         <div class="box box4 container-fluid">
-          <div class="icon icon4"><img src="assets/images/donation_icon.svg" alt="dollar coin icon"></div>
-          <div class="head6">
-            <h6>Pledges <br /> & <br /> Donations</h6>
+          <div class="icon icon4 no-hover"><img class="no-hover" src="assets/images/donation_icon.svg" alt="dollar coin icon"></div>
+          <div class="head6 no-hover">
+            <h6 class="no-hover">Pledges <br /> & <br /> Donations</h6>
           </div>
-          <div class="box-p">
-            <p>Most important part of the Back To Roots Global Concert is donations that will help eliminate some of
+          <div class="box-p no-hover">
+            <p class="no-hover">Most important part of the Back To Roots Global Concert is donations that will help eliminate some of
               global challenges through charities.</p>
           </div>
         </div>
