--- a/index.html
+++ b/index.html
@@ -154,15 +154,15 @@
   </section>
 
   <footer class="foot">
-    <p class="">SPONSORS</p>
+    <p class="hide spon-h">SPONSORS</p>
     <hr>
-    <p class="foot-p">2012 Back To Roots. Some rights Reserved. </p>
-    <div class="sponsor">
+    <div class="sponsor hide">
       <img id="sp1" src="assets/images/moster.png" alt="monster energy drink logo">
       <img id="sp2" src="assets/images/ford-logo.png" alt="ford logo">
       <img id="sp3" src="assets/images/coca.png" alt="coca-cola logo">
       <img id="sp4" src="assets/images/yamaha.png" alt="yamaha logo">
     </div>
+    <p class="foot-p">2012 Back To Roots. Some rights Reserved.</p>
   </footer>
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
