added effects on images

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <nav class="navbar nav2 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end"
       role="navigation">
       <ul class="">
-        <li><a href="#" class="nav-link2">About</a></li>
-        <li><a href="#" class="nav-link2">Program</a></li>
+        <li><a href="#about-page" class="nav-link2">About</a></li>
+        <li><a href="#program" class="nav-link2">Program</a></li>
         <li><a href="#" class="nav-link2">Join</a></li>
         <li><a href="#" class="nav-link2">Sponsors</a></li>
-        <li><a href="#" class="nav-link2 logo">BTR Concert</a></li>
+        <li><a href="#content" class="nav-link2 logo">BTR Concert</a></li>
       </ul>
 
     </nav>
@@ -157,10 +157,10 @@
     <p class="hide spon-h">SPONSORS</p>
     <hr>
     <div class="sponsor hide">
-      <img id="sp1" src="assets/images/moster.png" alt="monster energy drink logo">
-      <img id="sp2" src="assets/images/ford-logo.png" alt="ford logo">
-      <img id="sp3" src="assets/images/coca.png" alt="coca-cola logo">
-      <img id="sp4" src="assets/images/yamaha.png" alt="yamaha logo">
+      <img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
+      <img id="sp2" class="img-fluid" src="assets/images/ford-logo.png" alt="ford logo">
+      <img id="sp3" class="img-fluid" src="assets/images/coca.png" alt="coca-cola logo">
+      <img id="sp4" class="img-fluid" src="assets/images/yamaha.png" alt="yamaha logo">
     </div>
     <p class="foot-p">2012 Back To Roots. Some rights Reserved.</p>
   </footer>
