--- a/about.html
+++ b/about.html
@@ -72,9 +72,9 @@
   </section>
 
   <footer class="foot">
-    <p class="hide spon-h">SPONSORS</p>
+    <p class="spon-h">SPONSORS</p>
     <hr>
-    <div class="sponsor hide">
+    <div class="sponsor">
       <img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
       <img id="sp2" class="img-fluid" src="assets/images/ford-logo.png" alt="ford logo">
       <img id="sp3" class="img-fluid" src="assets/images/coca.png" alt="coca-cola logo">
