--- a/index.html
+++ b/index.html
@@ -132,28 +132,8 @@
 
   <!-- guest artists -->
   <section class="artists"></section>
-
-  <section class="about" id="about-page">
-    <div class="page-about">
-      <div class="overlay">
-        <div class="home-text about-text">
-          <h3>"It's about time to connect with your roots."</h3><br />
-          <h1>BACK TO ROOTS<br /> GLOBAL CONCERT 2012</h1>
-        </div>
-        <div class="home-p">
-          <p>A joyful celebration believing in the value of connecting with one's roots through musical entertainment.
-            Become the part of this year's concert by buying your ticket online.</p>
-        </div>
-        <div class="about-p2">
-          <p>Please contact us per Email for any further questions about the BTR Global Concert 2012!</p>
-          <p>info@brtgc.org</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer class="foot">
-    <p class="hide spon-h">SPONSORS</p>
+  <section class="partners">
+    <p class="spon-h">SPONSORS</p>
     <hr>
     <div class="sponsor hide">
       <img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
@@ -161,6 +141,10 @@
       <img id="sp3" class="img-fluid" src="assets/images/coca.png" alt="coca-cola logo">
       <img id="sp4" class="img-fluid" src="assets/images/yamaha.png" alt="yamaha logo">
     </div>
+  </section>
+
+  <footer class="foot">
+    <img class="btr" src="assets/images/BTR-Logo.png" alt="BTR Logo">
     <p class="foot-p">2012 Back To Roots. Some rights Reserved.</p>
   </footer>
   <script src="main.js"></script>
