--- a/about.html
+++ b/about.html
@@ -72,8 +72,7 @@
   </section>
 
   <footer class="foot">
-    <p class="spon-h">SPONSORS</p>
-    <hr>
+    <div><p class="spon-h">SPONSORS</p></div>
     <div class="sponsor">
       <img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
       <img id="sp2" class="img-fluid" src="assets/images/ford-logo.png" alt="ford logo">
