--- a/index.html
+++ b/index.html
@@ -133,19 +133,23 @@
   <!-- guest artists -->
   <section class="artists"></section>
   <section class="partners">
-    <p class="spon-h">SPONSORS</p>
-    <hr>
-    <div class="sponsor hide">
-      <img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
-      <img id="sp2" class="img-fluid" src="assets/images/ford-logo.png" alt="ford logo">
-      <img id="sp3" class="img-fluid" src="assets/images/coca.png" alt="coca-cola logo">
-      <img id="sp4" class="img-fluid" src="assets/images/yamaha.png" alt="yamaha logo">
+    <div class="spon-p-div justify-content-center">
+      <p class="spon-h">SPONSORS</p>
+     <div class="line1"><hr></div>
+    </div>
+    <div class="sponsor justify-content-center d-flex">
+     <div class="sponsor1"><img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
+      <img id="sp2" class="img-fluid" src="assets/images/ford-logo.png" alt="ford logo"></div>
+      <div class="sponsor1"><img id="sp3" class="img-fluid" src="assets/images/coca.png" alt="coca-cola logo">
+      <img id="sp4" class="img-fluid" src="assets/images/yamaha.png" alt="yamaha logo"></div>
     </div>
   </section>
 
-  <footer class="foot">
-    <img class="btr" src="assets/images/BTR-Logo.png" alt="BTR Logo">
-    <p class="foot-p">2012 Back To Roots. Some rights Reserved.</p>
+  <footer class="foot pt-5">
+    <div class="btr-div"><img class="btr" src="assets/images/BTR-Logo.png" alt="BTR Logo"></div>
+    <div class="foot-div">
+      <p class="foot-p">2012 Back To Roots. Some rights Reserved.</p>
+    </div>
   </footer>
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
