added more style

--- a/about.html
+++ b/about.html
@@ -71,16 +71,12 @@
     </div>
   </section>
 
-  <footer class="foot">
-    <div><p class="spon-h">SPONSORS</p></div>
-    <div class="sponsor">
-      <img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
-      <img id="sp2" class="img-fluid" src="assets/images/ford-logo.png" alt="ford logo">
-      <img id="sp3" class="img-fluid" src="assets/images/coca.png" alt="coca-cola logo">
-      <img id="sp4" class="img-fluid" src="assets/images/yamaha.png" alt="yamaha logo">
-    </div>
-    <p class="foot-p">2012 Back To Roots. Some rights Reserved.</p>
-  </footer>
+    <footer class="foot1 pt-5">
+      <div class="btr-div"><img class="btr" src="assets/images/BTR-Logo.png" alt="BTR Logo"></div>
+      <div class="foot1-div">
+        <p class="foot1-p">2012 Back To Roots. Some rights Reserved.</p>
+      </div>
+    </footer>
 
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
