--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
     <nav class="navbar nav2 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end"
       role="navigation">
       <ul class="">
+        <li id="small-logo"><a href="index.html"><img class="logo-small" src="assets/images/BTR-Logo.png" alt="btr logo"></a></li>
         <li><a href="about.html" class="nav-link2">About</a></li>
         <li><a href="#program" class="nav-link2">Program</a></li>
         <li><a href="#" class="nav-link2">Join</a></li>
