--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +15,7 @@
   <link rel="stylesheet" href="main.css">
   <title>Capstone</title>
 </head>
+
 <body>
   <header class="container=fluid">
     <nav class="navbar nav1 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end pb-0 pt-0"
@@ -33,7 +35,8 @@
     <nav class="navbar nav2 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end"
       role="navigation">
       <ul class="">
-        <li id="small-logo"><a href="index.html"><img class="logo-small" src="assets/images/BTR-Logo.png" alt="btr logo"></a></li>
+        <li id="small-logo"><a href="index.html"><img class="logo-small" src="assets/images/BTR-Logo.png"
+              alt="btr logo"></a></li>
         <li><a href="about.html" class="nav-link2">About</a></li>
         <li><a href="#program" class="nav-link2">Program</a></li>
         <li><a href="#" class="nav-link2">Join</a></li>
@@ -72,16 +75,26 @@
     </div>
   </section>
 
-    <footer class="foot1 pt-5">
-      <div class="btr-div"><img class="btr" src="assets/images/BTR-Logo.png" alt="BTR Logo"></div>
-      <div class="foot1-div">
-        <p class="foot1-p">2012 Back To Roots. Some rights Reserved.</p>
+  <section class="about2">
+    <div class="about2-div">
+      <div class="about2-txt">Back To Roots Global Concert 2012 Logo
+        <div><img class="about-line" src="assets/images/line3.svg" alt=""></div>
       </div>
-    </footer>
+      <div class="about2-logo"><img class="about2-logo-img" src="assets/images/BTR-Logo.png" alt="btr logo"></div>
+    </div>
+  </section>
+
+  <footer class="foot1 pt-5">
+    <div class="btr-div"><img class="btr" src="assets/images/BTR-Logo.png" alt="BTR Logo"></div>
+    <div class="foot1-div">
+      <p class="foot1-p">2012 Back To Roots. Some rights Reserved.</p>
+    </div>
+  </footer>
 
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
