--- a/about.html
+++ b/about.html
@@ -41,13 +41,13 @@
         <li><a href="#program" class="nav-link2">Program</a></li>
         <li><a href="#" class="nav-link2">Join</a></li>
         <li><a href="#" class="nav-link2">Sponsors</a></li>
-        <li><a href="index.html" class="nav-link2 logo">BTR Concert</a></li>
+        <li><a href="index.html" class="nav-link2 logo">BTR</a></li>
       </ul>
     </nav>
     <div class="menu_opt">
       <input type="button" name="close" value="X" class="close_menu" id="exit">
       <ul class="menu_list">
-        <li class="menu_items"><a href="index.html">BTR Concert</a></li>
+        <li class="menu_items"><a href="index.html">BTR</a></li>
         <li class="menu_items"><a href="about.html">About</a></li>
         <li class="menu_items"><a href="#program">Program</a></li>
         <li class="menu_items"><a href="#">Join</a></li>
@@ -59,11 +59,10 @@
   <section class="about" id="about-page">
     <div class="page-about">
       <div class="overlay">
-        <div class="home-text about-text">
-          <h3>"It's about time to connect with your roots."</h3><br />
-          <h1>BACK TO ROOTS<br /> GLOBAL CONCERT 2012</h1>
+        <div class="about-text">
+          <h2 id="about-head">BACK TO ROOTS<br /> GLOBAL CONCERT 2012</h2>
         </div>
-        <div class="home-p">
+        <div class="about-p">
           <p>A joyful celebration believing in the value of connecting with one's roots through musical entertainment.
             Become the part of this year's concert by buying your ticket online.</p>
         </div>
@@ -80,7 +79,32 @@
       <div class="about2-txt">Back To Roots Global Concert 2012 Logo
         <div><img class="about-line" src="assets/images/line3.svg" alt=""></div>
       </div>
+      <div class="about2-p">The Logo of BTR Global Concert 2012 was decided through the logo corporation from 08 June to
+        07 July.</div>
       <div class="about2-logo"><img class="about2-logo-img" src="assets/images/BTR-Logo.png" alt="btr logo"></div>
+    </div>
+
+    <div class="about2-div">
+      <div class="about2-txt2">See the past BTR Global Concert</div>
+        <div class="mx-auto"><img class="about-line" src="assets/images/line3.svg" alt="line"></div>
+      <div class="about2-p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget.</div>
+      <div class="about2-img1">
+       <div class="about2-logo-img img1"><div class="overlay1"><span>2010</span><br> BTR Global Concert </div></div> 
+       <div class="about2-logo-img img2"><div class="overlay1"> <span> 2011 </span> <br> BTR Global Concert</div></div> 
+      </div>
+    </div>
+  </section>
+
+  <section class="partners">
+    <div class="spon-p-div justify-content-center">
+      <p class="spon-h">SPONSORS</p>
+     <div class="line1"><hr></div>
+    </div>
+    <div class="sponsor justify-content-center d-flex">
+     <div class="sponsor1"><img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
+      <img id="sp2" class="img-fluid" src="assets/images/ford-logo.png" alt="ford logo"></div>
+      <div class="sponsor1"><img id="sp3" class="img-fluid" src="assets/images/coca.png" alt="coca-cola logo">
+      <img id="sp4" class="img-fluid" src="assets/images/yamaha.png" alt="yamaha logo"></div>
     </div>
   </section>
 
