--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <a class="menu justify-content-start"><img src="assets/images/menu_button.svg" alt="menu button"></a>
 
-    <nav class="navbar nav2 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end"
+    <nav class="navbar nav2 navbar-expand-lg fixed-top nav_container d-inline-flex justify-content-end ps-3"
       role="navigation">
       <ul class="">
         <li id="small-logo"><a href="index.html"><img class="logo-small" src="assets/images/BTR-Logo.png" alt="btr logo"></a></li>
@@ -40,13 +40,13 @@
         <li><a href="#program" class="nav-link2">Program</a></li>
         <li><a href="#" class="nav-link2">Join</a></li>
         <li><a href="#" class="nav-link2">Sponsors</a></li>
-        <li><a href="index.html" class="nav-link2 logo">BTR Concert</a></li>
+        <li><a href="index.html" class="nav-link2 logo">BTR</a></li>
       </ul>
     </nav>
     <div class="menu_opt">
       <input type="button" name="close" value="X" class="close_menu" id="exit">
       <ul class="menu_list">
-        <li class="menu_items"><a href="index.html">BTR Concert</a></li>
+        <li class="menu_items"><a href="index.html">BTR</a></li>
         <li class="menu_items"><a href="about.html">About</a></li>
         <li class="menu_items"><a href="#program">Program</a></li>
         <li class="menu_items"><a href="#">Join</a></li>
@@ -59,7 +59,7 @@
     <div class="home-top">
       <div class="overlay">
         <div class="home-text">
-          <h3>"It's about time to connect with your roots?"</h3><br />
+          <h3>"It's about time to connect with your roots"</h3><br />
           <h1>BACK TO ROOTS<br /> GLOBAL CONCERT <br /> 2012</h1>
         </div>
         <div class="home-p">
@@ -126,13 +126,17 @@
           </div>
         </div>
       </div>
-      <p class="no-display">SEE THE WHOLE PROGRAM</p>
+      <a class="no-display see-link text-center pt-5">SEE THE WHOLE PROGRAM</a>
       <div class="btn-div card-box"><input type="button" value="Join BTR Global Concert 2012" class="join-btn"> </div>
     </div>
   </section>
 
   <!-- guest artists -->
-  <section class="artists"></section>
+  <section >
+    <div class="text-center pt-3"><h4>Featured Artists</h4></div>
+    <div class="text-center"><img class="about-line" src="assets/images/line3.svg" alt=""></div>
+    <div class="artists"> </div>
+  </section>
   <section class="partners">
     <div class="spon-p-div justify-content-center">
       <p class="spon-h">SPONSORS</p>
